--- a/TransParence.theme.css
+++ b/TransParence.theme.css
@@ -5,10 +5,10 @@
  * @author TransParent (originally by CapnKitten)
  */
 
-@import url('https://capnkitten.github.io/BetterDiscord/Themes/Translucence/css/source.css');
+@import url('https://raw.githack.com/SubstituteDoll/TransParence/main/css/source.css');
 
 :root {
-    --app-bg: url(https://i.imgur.com/bgmVeyt.jpg);
+    --app-bg: url(https://github.com/SubstituteDoll/TransParence/blob/main/img/astro_northern_lights.png?raw=true);
     --app-blur: 6px;
     --app-margin: 0px;
     --app-radius: 0px; /*    -    */
